# cmake-flag-manager

./: CMakeLists.txt  README.md
cmake/: FlagManager.cmake
src/: source.cpp
